<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/obrazek2"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="363dp"
        android:layout_height="292dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/background_dark"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/textView4"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:popupBackground="@android:color/holo_blue_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText5"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_light"
                android:ems="10"
                android:hint="@string/editText5"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button19"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button19"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/textView2"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:popupBackground="@android:color/holo_blue_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/editText2"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button20"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button20"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/textView5"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:popupBackground="@android:color/holo_blue_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:backgroundTint="@android:color/background_light"
                android:ems="10"
                android:hint="@string/editText3"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button21"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button21"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>